--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ html {
 }
 
 body {
-  background-image: url(511.png);
+  background-image: url("C:\Users\Saroth\Desktop\My html project\511 - Copy.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
